[package]
name = "neo4j-sync"
version = "0.1.0"
edition = "2021"
description = "Event-driven Neo4j workspace sync daemon for AlphaOne"

[[bin]]
name = "neo4j-sync"
path = "src/main.rs"

[dependencies]
neo4rs = "0.8"
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.7"
tokio = { version = "1", features = ["rt", "macros", "time", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
